2007-09-26  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/controllers/console: New (wonderful) debug console.

	Initial version. Very first try implemenation, so, more to come
	later.

2007-09-25  P. Henrique Silva  <henrique@astro.ufsc.br>

	* controllers/autofocus.py:
	First implementation of autofocus routine. Partially testd with
	fake data.
	
	* util/sexcatalog.py:
	* util/sextractor.py:

	SExtractor wrapper used by autofocus routine.

2007-07-13  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/meade.py: Fix on open and correct log level
	on the exception handlers.

2007-07-13  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/interfaces/telescope.py: More Object
	orientation design (this interfaces is till unfrozen).
	
	* src/chimera/util/coord.py: Fixes and add SkyPoint class.
	
	* src/chimera/drivers/meade.py: Add support for park/unpark,
	date/time/latitude/longitude settings and synchronization.

2007-07-13  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/interfaces/dome.py:
	* src/chimera/instruments/dome.py:
	* src/chimera/drivers/domelna40cm.py: New dome implementation with
	support to LNA's 40cm dome.

2007-07-13  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/instruments/focuser.py: New interface.
	* src/chimera/drivers/optectcfs.py: OPTEC TCF-S support.
	* src/chimera/interfaces/focuser.py: New focuser implementation.

2007-07-11  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/controllers/observer.py: New proposed keywords (fixed).

	* src/chimera/instruments/filterwheel.py:
	* src/chimera/instruments/telescope.py:	Minor typo fixed.

2007-07-04  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/paramount.py: Added support for TheSky
	version 5 (only 6 was supported).

	Driver renamed to TheSkyTelescope as we use this driver for more
	than Paramount by now (Meade on LNA).

2007-07-04  P. Henrique Silva  <henrique@astro.ufsc.br>
